@@ -1,3 +1,10 @@
+[2018-03-20 23:52:09 +0100]  Inxi package got removed                                                   karasu      {ad471fe0}
+[2018-02-18 11:12:12 +0100]  Merge pull request #854 from notmatt/mbs_no_dxtn_14                    Gustau Castells {25ecf7aa}
+[2018-02-17 15:34:25 -0800]  Removes obsolete package libtxc_dxtn                                   Matthew Smillie {8b3dc84f}
+[2018-02-15 22:04:15 +0100]  Minor changes in zfs.py                                                    karasu      {56ed80d2}
+[2018-02-15 21:52:54 +0100]  Fixes https://github.com/Antergos/Cnchi/issues/848                         karasu      {0bffd131}
+[2018-02-15 20:36:11 +0100]  Minor changes                                                              karasu      {1d3fa1ac}
+[2018-01-06 08:30:06 +0100]  Add awesome-terminal-font to i3                                            karasu      {7acf5fbd}
 [2018-01-06 08:29:21 +0100]  add inxi, screenfetch and htop                                             karasu      {ca5a56a6}
 [2018-01-06 08:26:37 +0100]  Add inxi, screenfetch and htop                                             karasu      {7b6c85e6}
 [2018-01-01 12:21:33 +0100]  Remove unused link                                                         karasu      {df90324c}
